--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -32,7 +32,7 @@
         background-color: $color-background-body;
         color: $like-button-color;
         font-size: nth($font-size, 1);
-        z-index: 1;
+        z-index: 0;
         &--clicked {
             z-index: -1;
             background: linear-gradient($color-primary, $color-secondary);
